Fix text alignement

--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -1,3 +1,3 @@
 div {
-    color: white; background-color: red; font-size: 32px; align-self: center; font-weight: bold;
+    color: white; background-color: red; font-size: 32px; text-align: center; font-weight: bold;
 }
